--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -4,12 +4,6 @@
     <link type="text/css" rel="stylesheet"
                           href="{{ static_url('css/styles.css') }}">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-		<script type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
-    </script>
-
-		<script type="text/javascript" src="{{ static_url('js/main.js') }}"></script>
   </head>
 
   <body>
@@ -19,9 +13,7 @@
 
     <div id="column-buttons">
     {% for column in range(num_columns) %}
-      <button id="column-{{ column }}"
-              onclick="ws.send('{{ column }}');return false;"
-      >
+      <button onclick="send_play(ws, {{ column }});">
         Play here
       </button>
     {% end %}
@@ -36,5 +28,18 @@
       </tr>
       {% end %}
     </table>
+
+
+		<script type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
+    </script>
+
+    <script type="text/javascript">
+      window.num_rows = {{ num_rows }};
+      window.num_columns = {{ num_columns }};
+      window.num_to_win = {{ num_to_win }};
+    </script>
+
+		<script type="text/javascript" src="{{ static_url('js/main.js') }}"></script>
   </body>
 </html>
