--- a/connectfour/views/web/templates/setup.html
+++ b/connectfour/views/web/templates/setup.html
@@ -1,28 +1,25 @@
-<html>
-  <head>
-    <title>{{ title }}</title>
-    <link href="{{ static_url('css/styles.css') }}" rel="stylesheet"
-      type="text/css">
-  </head>
-
-  <body>
-    <h1>Welcome to Connect X</h1>
-
-    <form action="/game">
-      Num rows: <input type="text" name="num_rows">
-      <br>
-      Num columns: <input type="text" name="num_columns">
-      <br>
-      Num to win: <input type="text" name="num_to_win">
-      <br>
-      Players (comma separated): <input type="text" name="players">
-      <br>
+{% extends "base.html" %}
 
 
-      <br>
-      <br>
+{% block content %}
 
-      <input type="submit" value="Submit">
-    </form>
-  </body>
-</html>
+<h1>Welcome to Connect X</h1>
+
+<form action="/game">
+  Num rows: <input type="text" name="num_rows">
+  <br>
+  Num columns: <input type="text" name="num_columns">
+  <br>
+  Num to win: <input type="text" name="num_to_win">
+  <br>
+  Players (comma separated): <input type="text" name="players">
+  <br>
+
+
+  <br>
+  <br>
+
+  <input type="submit" value="Submit">
+</form>
+
+{% end %}
