--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -1,45 +1,40 @@
-<html>
-  <head>
-    <title>{{ title }}</title>
-    <link type="text/css" rel="stylesheet"
-                          href="{{ static_url('css/styles.css') }}">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  </head>
+{% extends "base.html" %}
 
-  <body>
-    <a href="/">Go Home</a>
 
-    <h1>Connect {{ num_to_win }}</h1>
+{% block content %}
+<a href="/">Go Home</a>
 
-    <div id="column-buttons">
+<h1>Connect {{ num_to_win }}</h1>
+
+<div id="column-buttons">
+{% for column in range(num_columns) %}
+  <button onclick="send_play(ws, {{ column }});">
+    Play here
+  </button>
+{% end %}
+</div>
+
+<table id="game-grid">
+  {% for row in range(num_rows) %}
+  <tr class="game-row">
     {% for column in range(num_columns) %}
-      <button onclick="send_play(ws, {{ column }});">
-        Play here
-      </button>
+    <td class="game-square"></td>
     {% end %}
-    </div>
+  </tr>
+  {% end %}
+</table>
 
-    <table id="game-grid">
-      {% for row in range(num_rows) %}
-      <tr class="game-row">
-        {% for column in range(num_columns) %}
-        <td class="game-square"></td>
-        {% end %}
-      </tr>
-      {% end %}
-    </table>
+{% end %}
 
 
-		<script type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
-    </script>
+{% block js %}
 
-    <script type="text/javascript">
-      window.num_rows = {{ num_rows }};
-      window.num_columns = {{ num_columns }};
-      window.num_to_win = {{ num_to_win }};
-    </script>
+<script type="text/javascript">
+  window.num_rows = {{ num_rows }};
+  window.num_columns = {{ num_columns }};
+  window.num_to_win = {{ num_to_win }};
+</script>
 
-		<script type="text/javascript" src="{{ static_url('js/main.js') }}"></script>
-  </body>
-</html>
+<script type="text/javascript" src="{{ static_url('js/main.js') }}"></script>
+
+{% end %}
