Move js to <head> but make it async

--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+
 <a href="/">Go Home</a>
 
 <h1>Connect {{ num_to_win }}</h1>
@@ -35,6 +36,7 @@
   window.num_to_win = {{ num_to_win }};
 </script>
 
-<script type="text/javascript" src="{{ static_url('js/main.js') }}"></script>
+<script type="text/javascript" src="{{ static_url('js/main.js') }}" async>
+</script>
 
 {% end %}
