--- a/connectfour/views/web/templates/base.html
+++ b/connectfour/views/web/templates/base.html
@@ -1,20 +1,23 @@
 <html>
   <head>
     <title>{{ title }}</title>
+
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
     <link type="text/css" rel="stylesheet"
                           href="{{ static_url('css/styles.css') }}">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+    <script type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"
+      async>
+    </script>
+
+    {% block js %}{% end %}
   </head>
 
   <body>
     <div id="content">
       {% block content %}{% end %}
     </div>
-
-    <script type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
-    </script>
-
-    {% block js %}{% end %}
   </body>
 </html>
