--- a/connectfour/views/web/templates/base.html
+++ b/connectfour/views/web/templates/base.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"
-      async>
+      defer>
     </script>
 
     {% block js %}{% end %}
