More appropriate <title>s

--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -5,7 +5,7 @@
 
 <a href="/">Go Home</a>
 
-<h1>Connect {{ num_to_win }}</h1>
+<h1>{{ title }}</h1>
 
 <div id="column-buttons">
 {% for column in range(num_columns) %}
