Move console printing feedback to responses from modelaction

--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -34,6 +34,16 @@
   window.num_rows = {{ num_rows }};
   window.num_columns = {{ num_columns }};
   window.num_to_win = {{ num_to_win }};
+  window.colors = [];
+  window.players = [];
+
+  {% for color in colors %}
+    window.colors.push("{{ color }}");
+  {% end %}
+
+  {% for player in players %}
+    window.players.push("{{ player }}");
+  {% end %}
 </script>
 
 <script type="text/javascript" src="{{ static_url('js/main.js') }}" defer>
