Add default feedback bar text

--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -9,7 +9,7 @@
 
 <h3>Game <span id="game-number"></span></h3>
 
-<div id="game-feedback"></div>
+<div id="game-feedback">Feedback goes here</div>
 
 <div id="game-board">
   <div id="column-buttons">
