--- a/connectfour/views/web/templates/game.html
+++ b/connectfour/views/web/templates/game.html
@@ -14,7 +14,7 @@
 <div id="game-board">
   <div id="column-buttons">
     {% for column in range(num_columns) %}
-    <button class="column-play" onclick="sendPlay({{ column }});">
+    <button class="column-play" onclick="sendPlay({{ column }});" disabled>
       Play here
     </button>
     {% end %}
@@ -32,7 +32,7 @@
 </div>
 
 <div id="more-controls">
-  <button id="play-again" onclick="sendStartGame();" disabled>
+  <button id="play-again" onclick="sendStartGame();">
     Play again?
   </button>
 </div>
@@ -46,16 +46,6 @@
   window.num_rows = {{ num_rows }};
   window.num_columns = {{ num_columns }};
   window.num_to_win = {{ num_to_win }};
-  window.colors = [];
-  window.players = [];
-
-  {% for color in colors %}
-    window.colors.push("{{ color }}");
-  {% end %}
-
-  {% for player in players %}
-    window.players.push("{{ player }}");
-  {% end %}
 </script>
 
 <script type="text/javascript" src="{{ static_url('js/main.js') }}" defer>
