--- a/connectfour/views/web/templates/setup.html
+++ b/connectfour/views/web/templates/setup.html
@@ -5,7 +5,7 @@
 
 <h1>Welcome to Connect X</h1>
 
-<form action="/game">
+<form action="" method="post">
   Num rows:
   <input type="text" name="num_rows" value="{{ default_rows }}">
   <br>
