Add third default name

--- a/connectfour/views/web/templates/setup.html
+++ b/connectfour/views/web/templates/setup.html
@@ -19,7 +19,7 @@
   <br>
 
   Players (comma separated):
-  <input type="text" name="players" value="Alice,Bob">
+  <input type="text" name="players" value="Alice, Bob, Carol">
   <br>
 
   <br>
