--- a/connectfour/views/web/templates/base.html
+++ b/connectfour/views/web/templates/base.html
@@ -4,20 +4,23 @@
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <link type="text/css" rel="stylesheet"
-                          href="{{ static_url('css/styles.css') }}">
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/styles.css') }}">
 
-    <script type="text/javascript"
+    <script
+      type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"
       defer>
     </script>
 
-    {% block js %}{% end %}
+    {% block js %}{% endblock %}
   </head>
 
   <body>
     <div id="content">
-      {% block content %}{% end %}
+      {% block content %}{% endblock %}
     </div>
   </body>
 </html>
