--- a/connectfour/views/web/static/css/styles.css
+++ b/connectfour/views/web/static/css/styles.css
@@ -2,28 +2,20 @@ body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
-#home-button {
-  display: block;
+#game-content {
+  display: none;
 }
 
-#game-grid {
-  border-collapse: collapse;
+.game-square, .column-play {
+  margin: 1vmin;
+  float: left;
 }
 
-#game-grid .game-square {
-  border: 3px #555 solid;
-  background: yellow;
-  height: 80px;
-  width: 80px;
-  padding: 0;
-  margin: 0;
+.game-square {
+  border-radius: 5px;
 }
 
-#column-buttons button {
-  width: 80px;
-}
-
-#game-feedback, #game-board, #more-controls {
+#game-title, #game-feedback, #game-board, #more-controls {
   margin-bottom: 40px;
 }
 
