--- a/connectfour/views/web/templates/index.html
+++ b/connectfour/views/web/templates/index.html
@@ -13,7 +13,7 @@
         <div id="column-buttons"></div>
         <div id="game-grid"></div>
       </div>
-      <div id="more-controls"></div>
+      <div id="game-controls"></div>
     </div>
   </body>
 </html>
