--- a/connectfour/views/web/templates/index.html
+++ b/connectfour/views/web/templates/index.html
@@ -2,6 +2,7 @@
   {% include 'head.html' %}
 
   <body>
+    <div id="muxypoo"></div>
     <div id="setup-content">
       {% include 'setup.html' %}
     </div>
