--- a/connectfour/views/web/templates/head.html
+++ b/connectfour/views/web/templates/head.html
@@ -6,7 +6,7 @@
   <link
     type="text/css"
     rel="stylesheet"
-    href="{{ url_for('static', filename='bin/stylesheets/styles.css') }}">
+    href="{{ url_for('static', filename='bin/stylesheets/connectfour.css') }}">
 
   <script type="text/javascript">
     window.DEFAULT_ROWS = {{ DEFAULT_ROWS }};
@@ -16,7 +16,7 @@
 
   <script
     type="text/javascript"
-    src="{{ url_for('static', filename='bin/js/app.bundle.js') }}"
+    src="{{ url_for('static', filename='bin/js/connectfour.bundle.js') }}"
     defer>
   </script>
 </head>
