Continue chugging along

--- a/connectfour/views/web/static/bin/stylesheets/connectfour.css
+++ b/connectfour/views/web/static/bin/stylesheets/connectfour.css
@@ -2,15 +2,19 @@ body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background: red; }
 
-#game-content {
-  display: none; }
-  #game-content #game-title, #game-content #game-feedback, #game-content #game-board, #game-content #game-controls {
-    margin-bottom: 40px; }
-  #game-content .game-square, #game-content .column-play {
-    margin: 1vmin;
-    float: left; }
-  #game-content .game-square {
-    border-radius: 5px; }
+#game-title, #feedback-bar, #game-board, #game-controls {
+  margin-bottom: 40px; }
+
+#feedback-bar {
+  background: white;
+  padding: 5px; }
+
+.game-square, .column-play {
+  margin: 1vmin;
+  float: left; }
+
+.game-square {
+  border-radius: 5px; }
 
 @keyframes blinker {
   from {
