--- a/connectfour/views/web/static/src/stylesheets/connectfour.sass
+++ b/connectfour/views/web/static/src/stylesheets/connectfour.sass
@@ -3,21 +3,22 @@ body
   background: red
 
 
-#game-content
-  display: none
+#game-title, #feedback-bar, #game-board, #game-controls
+  margin-bottom: 40px
 
 
-  #game-title, #game-feedback, #game-board, #game-controls
-    margin-bottom: 40px
+#feedback-bar
+  background: white
+  padding: 5px
 
 
-  .game-square, .column-play
-    margin: 1vmin
-    float: left
+.game-square, .column-play
+  margin: 1vmin
+  float: left
 
 
-  .game-square
-    border-radius: 5px
+.game-square
+  border-radius: 5px
 
 
 @keyframes blinker
