--- a/connectfour/views/web/static/src/stylesheets/connectfour.sass
+++ b/connectfour/views/web/static/src/stylesheets/connectfour.sass
@@ -3,11 +3,11 @@ body
   background: red
 
 
-#game-title, #feedback-bar, #game-board, #game-controls
+#game-title, #game-feedback, #game-board, #game-controls
   margin-bottom: 40px
 
 
-#feedback-bar
+#game-feedback
   background: white
   padding: 5px
 
@@ -19,6 +19,33 @@ body
 
 .game-square
   border-radius: 5px
+
+  &-black
+    background: black
+
+  &-red
+    background: red
+
+  &-blue
+    background: blue
+
+  &-purple
+    background: purple
+
+  &-green
+    background: green
+
+  &-brown
+    background: brown
+
+  &-pink
+    background: pink
+
+  &-gray
+    background: gray
+
+  &-orange
+    background: orange
 
 
 @keyframes blinker
