--- a/connectfour/views/web/static/bin/stylesheets/connectfour.css
+++ b/connectfour/views/web/static/bin/stylesheets/connectfour.css
@@ -15,6 +15,8 @@ body {
 
 .game-square {
   border-radius: 5px; }
+  .game-square-null {
+    background: yellow; }
   .game-square-black {
     background: black; }
   .game-square-red {
