--- a/connectfour/views/web/static/src/stylesheets/connectfour.sass
+++ b/connectfour/views/web/static/src/stylesheets/connectfour.sass
@@ -1,6 +1,6 @@
 body
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif
-  background: red
+  background: cornflowerblue
 
 
 #game-title, #game-feedback, #game-board, #game-controls
@@ -21,7 +21,7 @@ body
   border-radius: 5px
 
   &-null
-    background: yellow
+    background: gold
 
   &-black
     background: black
@@ -33,22 +33,22 @@ body
     background: blue
 
   &-purple
-    background: purple
+    background: blueviolet
 
   &-green
-    background: green
+    background: forestgreen
 
   &-brown
-    background: brown
+    background: saddlebrown
 
   &-pink
-    background: pink
+    background: hotpink
 
   &-gray
-    background: gray
+    background: darkgray
 
   &-orange
-    background: orange
+    background: darkorange
 
 
 @keyframes blinker
