--- a/connectfour/views/web/static/bin/stylesheets/connectfour.css
+++ b/connectfour/views/web/static/bin/stylesheets/connectfour.css
@@ -2,14 +2,30 @@ body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background: cornflowerblue; }
 
-#game-title, #game-feedback, #game-board, #game-controls {
+input, button {
+  background: #eee; }
+
+input {
+  padding: 3px;
+  border: none;
+  border-radius: 1px; }
+
+button {
+  cursor: pointer;
+  padding: 5px;
+  border: none;
+  border-radius: 3px; }
+  button:hover {
+    background: #aaa; }
+
+#game-title, #game-players, #game-feedback, #game-board, #game-controls {
   margin-bottom: 40px; }
 
 #game-feedback {
-  background: white;
-  padding: 5px; }
+  background: #92b4f2;
+  padding: 10px; }
 
-.game-square, .column-play {
+.game-column-button, .game-square {
   margin: 1vmin;
   float: left; }
 
