--- a/connectfour/views/web/static/src/stylesheets/connectfour.sass
+++ b/connectfour/views/web/static/src/stylesheets/connectfour.sass
@@ -23,7 +23,7 @@ button
     background: #aaa
 
 
-#game-title, #game-players, #game-feedback, #game-board, #game-controls
+#game-title, #game-players, #game-start, #game-feedback, #game-board, #game-controls
   margin-bottom: 40px
 
 
