--- a/connectfour/views/web/static/src/stylesheets/connectfour.sass
+++ b/connectfour/views/web/static/src/stylesheets/connectfour.sass
@@ -14,13 +14,13 @@ input
 
 
 button
-  cursor: pointer
-  padding: 5px
+  padding: 5px 8px
   border: none
   border-radius: 3px
 
-  &:hover
+  &:hover:enabled
     background: #aaa
+    cursor: pointer
 
 
 #game-title, #game-players, #game-start, #game-feedback, #game-board, #game-controls
@@ -47,7 +47,7 @@ button
     background: black
 
   &-red
-    background: red
+    background: crimson
 
   &-blue
     background: blue
