Make title bigger

--- a/connectfour/views/web/static/src/stylesheets/connectfour.sass
+++ b/connectfour/views/web/static/src/stylesheets/connectfour.sass
@@ -26,6 +26,12 @@ button
     cursor: pointer
 
 
+h1
+  font-variant: bold
+  font-size: 40px
+  color: white
+
+
 .section
   margin-bottom: 40px
 
