--- a/connectfour/views/web/static/bin/stylesheets/connectfour.css
+++ b/connectfour/views/web/static/bin/stylesheets/connectfour.css
@@ -18,6 +18,11 @@ button {
     background: #aaa;
     cursor: pointer; }
 
+h1 {
+  font-variant: bold;
+  font-size: 40px;
+  color: white; }
+
 .section {
   margin-bottom: 40px; }
 
