--- a/connectfour/views/web/static/bin/stylesheets/connectfour.css
+++ b/connectfour/views/web/static/bin/stylesheets/connectfour.css
@@ -25,11 +25,28 @@ h1 {
 
 .section {
   margin-bottom: 40px; }
+  .section:last-child {
+    margin-bottom: none; }
 
 #game-feedback {
   border-radius: 5px;
   background: #a9c4f5;
   padding: 10px; }
+
+#game-players {
+  position: absolute;
+  top: 0;
+  right: 0; }
+  #game-players table {
+    border-collapse: collapse; }
+    #game-players table td {
+      padding: 10px;
+      border: 1px solid gold; }
+
+.player-key {
+  border-radius: 2px;
+  padding: 5px 10px;
+  color: white; }
 
 .game-column-button, .game-square {
   margin: 1vmin;
@@ -37,28 +54,39 @@ h1 {
 
 .game-square {
   border-radius: 5px; }
-  .game-square-null {
-    background: gold; }
-  .game-square-black {
-    background: black; }
-  .game-square-red {
-    background: crimson; }
-  .game-square-blue {
-    background: royalblue; }
-  .game-square-purple {
-    background: blueviolet; }
-  .game-square-green {
-    background: forestgreen; }
-  .game-square-brown {
-    background: saddlebrown; }
-  .game-square-pink {
-    background: hotpink; }
-  .game-square-gray {
-    background: darkgray; }
-  .game-square-orange {
-    background: darkorange; }
-  .game-square-lime {
-    background: chartreuse; }
+
+.game-square-null, .player-key-null {
+  background: gold; }
+
+.game-square-black, .player-key-black {
+  background: black; }
+
+.game-square-red, .player-key-red {
+  background: crimson; }
+
+.game-square-blue, .player-key-blue {
+  background: royalblue; }
+
+.game-square-purple, .player-key-purple {
+  background: blueviolet; }
+
+.game-square-green, .player-key-green {
+  background: forestgreen; }
+
+.game-square-brown, .player-key-brown {
+  background: saddlebrown; }
+
+.game-square-pink, .player-key-pink {
+  background: hotpink; }
+
+.game-square-gray, .player-key-gray {
+  background: darkgray; }
+
+.game-square-orange, .player-key-orange {
+  background: darkorange; }
+
+.game-square-lime, .player-key-lime {
+  background: chartreuse; }
 
 @keyframes blinker {
   from {
