--- a/connectfour/views/web/templates/head.html
+++ b/connectfour/views/web/templates/head.html
@@ -6,7 +6,7 @@
   <link
     type="text/css"
     rel="stylesheet"
-    href="{{ url_for('static', filename='bin/stylesheets/connectfour.css') }}">
+    href="{{ url_for('static', filename='bin/stylesheets/styles.css') }}">
 
   <script type="text/javascript">
     window.DEFAULT_ROWS = {{ DEFAULT_ROWS }};
