--- a/connectfour/views/web/static/src/stylesheets/page.sass
+++ b/connectfour/views/web/static/src/stylesheets/page.sass
@@ -1,6 +1,7 @@
 body
+  box-sizing: border-box
   background: $background-color
-  padding: $whitespace / 2 5vmin
+  padding: $whitespace / 2 $body-padding
 
 
 h1
