--- a/connectfour/views/web/static/src/stylesheets/setup.sass
+++ b/connectfour/views/web/static/src/stylesheets/setup.sass
@@ -1,6 +1,9 @@
 #setup-screen
-  h2
+  div
+    @include sectionify($whitespace)
+
+  h3
     margin-bottom: $whitespace / 3
 
-  button
-    margin-top: $whitespace / 3
+  dl
+    margin-bottom: $whitespace / 3
