--- a/connectfour/views/web/static/src/stylesheets/font.sass
+++ b/connectfour/views/web/static/src/stylesheets/font.sass
@@ -5,9 +5,19 @@ body
 h1
   font-size: 48px
   color: white
-  font-weight: bold
 
 
 h2
+  font-size: 38px
+
+
+h3
   font-size: 28px
+
+
+h4
+  font-size: 18px
+
+
+h1, h2, h3, h4
   font-weight: bold
