--- a/connectfour/views/web/static/src/stylesheets/elements.sass
+++ b/connectfour/views/web/static/src/stylesheets/elements.sass
@@ -25,15 +25,5 @@ dl
   dd
     margin-bottom: 10px
 
-
-dl.inline
-  dt
-    display: inline-block
-
-  dd
-    display: inline
-    margin-left: $whitespace
-
-    &:after
-      content: ''
-      display: block
+  &:last-of-type
+    margin-bottom: none
