--- a/connectfour/views/web/static/src/stylesheets/styles.sass
+++ b/connectfour/views/web/static/src/stylesheets/styles.sass
@@ -2,9 +2,25 @@
 
 @import reset
 
+$base-font-size: 16px
 $whitespace: 40px
-$background-color: lighten(cornflowerblue, 5%)
 $body-padding: 5vmin
+
+$background-blue: cornflowerblue
+$yellow: gold
+$black: black
+$red: crimson
+$blue: royalblue
+$purple: blueviolet
+$green: forestgreen
+$brown: saddlebrown
+$pink: hotpink
+$gray: darkgray
+$orange: darkorange
+$lime: chartreuse
+
+$background-color: lighten($background-blue, 5%)
+
 
 @mixin sectionify($margin)
   margin-bottom: $margin
