--- a/connectfour/views/web/static/stylesheets/src/game.sass
+++ b/connectfour/views/web/static/stylesheets/src/game.sass
@@ -10,11 +10,9 @@
 
   #game-info
     right: 0
-    background: lighten($background-color, 10%)
-    border-radius: 5px
 
     td
-      padding-right: 5px
+      padding-left: 5px
 
   #game-board
     float: left
